--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.liquibase.enabled=true
 spring.liquibase.default-schema=public
 spring.liquibase.contexts=development
 
+logging.level.org.springframework.security = DEBUG
+#spring.security.user.name = bowang
+#spring.security.user.password = bowang
