--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=${DB_PASSWORD:123456}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.address=0.0.0.0
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
